--- a/template/index.html
+++ b/template/index.html
@@ -10,11 +10,21 @@
     </head>
 <body>
 
-        <div class="kack-haufen"><img src="kack.png"></div>
+
     <div class="main">
+        <div class="kack-haufen"><img src="kack.png"></div>
+        <div class="social-media">
+            <span class="icons">
+                <a href="https://www.facebook.com/jodekadev" target="_blank"><i class="icon-facebook"></i></a>
+                <a href="https://twitter.com/JosefBiehler" target="_blank"><i class="icon-twitter"></i></a>
+                <a href="https://github.com/gabbersepp/" target="_blank"><i class="icon-github-circled"></i></a>
+                <a href="mailto:support@biehler-josef.de"><i class="icon-envelope-open"></i></a>
+            </span>
+        </div>
         <div class="content"></div>
-        <div class="herbert"></div>
+        <div class="herbert"><img src="herbert.png"></div>
+    
+        <footer><div>Josef Biehler</div><div>contact@kack.dev</div></footer>
     </div>
-    <footer></footer>
 </body>
 </html>
