--- a/template/index.html
+++ b/template/index.html
@@ -21,7 +21,22 @@
                 <a href="mailto:support@biehler-josef.de"><i class="icon-envelope-open"></i></a>
             </span>
         </div>
-        <div class="content"></div>
+        <div class="content">
+
+            <div class="img-container">
+                <img src="img/1222424643908272128.jpg">
+            </div>
+
+            <div class="img-container">
+                <img src="img/1222463228053270529.jpg">
+            </div>
+
+            <div class="img-container">
+                <img src="img/1222582701905104901.jpg">
+            </div>
+
+            
+        </div>
         <div class="herbert"><img src="herbert.png"></div>
     
         <footer><div>Josef Biehler</div><div>contact@kack.dev</div></footer>
