--- a/template/index.css
+++ b/template/index.css
@@ -36,7 +36,7 @@ body {
     height: 100%
 }
 
-.kack-haufen {
+.kack-haufen1 {
     padding-left: 1rem;
     padding-top: 1rem;
     border-top-right-radius: 50%;
@@ -47,14 +47,21 @@ body {
     top: -200px;
     left: 0;
     z-index: 100;
-    box-shadow: 0 0 0 10px grey;
+}
+
+.kack-haufen {
+  padding-left: 1rem;
+  padding-top: 1rem;
+  position: absolute;
+  left: 0;
+  z-index: 100;
 }
 
 .kack-haufen img {
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
     position: absolute;
-    top: 200px;
+    top: 0px;
 }
 
 .content {
@@ -68,6 +75,50 @@ body {
     transform: rotate(2deg);
     
     background-color: white;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+
+
+}
+
+.img-container {
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+
+	margin: 0 12px 12px 0;
+	padding: 4px;
+	background-color: #fafafa;
+	box-shadow: 2px 2px 6px #111;
+  border-radius: 2px;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.img-container img {
+  width: 180px;
+  height: 180px;
+}
+
+.img-container:nth-child(2n+1) {
+	transform: rotate(-2deg);
+}
+.img-container:nth-child(3n+2) {
+	transform: rotate(1deg);
+}
+.img-container:nth-child(5n+3) {
+	transform: rotate(-3deg);
+}
+.img-container:nth-child(7n+5) {
+	transform: rotate(6deg);
+}
+.img-container:nth-child(11n+7) {
+	transform: rotate(4deg);
 }
 
 .social-media {
