--- a/template/index.html
+++ b/template/index.html
@@ -21,6 +21,15 @@
                 <a href="mailto:support@biehler-josef.de"><i class="icon-envelope-open"></i></a>
             </span>
         </div>
+
+<div class="caption">
+Für die tägliche Dosis an Scheißcartoons
+</div>
+
+        <div class="info">
+            Das ist Herbert. Herbert ist ein Software-entwickler. Wer hätte das gedacht.
+        </div>
+
         <div class="content">
 
             <div class="img-container">
