--- a/template/index.css
+++ b/template/index.css
@@ -28,12 +28,16 @@ body {
     font-size: 12px;
     background-color: grey;
     font-family: "Bangers-Regular";
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .main {
     position: relative;
-    width: 100%;
-    height: 100%
+    width: 1060px;
+    height: 500px;
 }
 
 .kack-haufen1 {
@@ -119,6 +123,47 @@ body {
 }
 .img-container:nth-child(11n+7) {
 	transform: rotate(4deg);
+}
+
+.caption-center {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%) rotate(-2deg);
+}
+
+.caption {
+  font-size: 30px;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%) rotate(-2deg);
+  
+  margin:15px;
+  padding:5px 5px;
+  float:right;
+  background:#ddd;
+  border:1px solid #222;
+  box-shadow:3px 3px 0 #222;
+
+  width: 300px;
+  z-index: 100;
+}
+
+.info {
+  font-size: 30px;
+  position: absolute;
+  right: 0;
+  top: 120px;
+  transform: rotate(-2deg);
+  
+  margin:15px;
+  padding:5px 5px;
+  float:right;
+  background:#ddd;
+  border:1px solid #222;
+  box-shadow:3px 3px 0 #222;
+
+  width: 200px;
+  z-index: 100;
 }
 
 .social-media {
