first try to add twitter card

--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -5,6 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/index.css">
         
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:description" content="Kack.dev Cartoons" />
+        <meta name="twitter:title" content="Eine Ode an den Entwickler" />
+        <meta name="twitter:site" content="@JosefBiehler" />
+        <meta name="twitter:image" content="https://kack.dev/assets/twittercard.jpg" />
+        
         <title>Kack Dev</title>
     </head>
 <body>
@@ -16,7 +22,7 @@
             <a href="https://www.facebook.com/jodekadev" target="_blank"><i class="icon-facebook"></i></a>
             <a href="https://twitter.com/JosefBiehler" target="_blank"><i class="icon-twitter"></i></a>
             <a href="https://github.com/gabbersepp/" target="_blank"><i class="icon-github-circled"></i></a>
-            <a href="mailto:support@biehler-josef.de"><i class="icon-envelope-open"></i></a>
+            <a href="mailto:contact@kack.dev"><i class="icon-envelope-open"></i></a>
         </span>
     </div>
 
