--- a/styles/index.scss
+++ b/styles/index.scss
@@ -136,6 +136,10 @@ body {
   left: 50%;
   transform: translate(-50%) rotate(-2deg);
   z-index: 100;
+
+  .tags {
+    font-size: 1rem;
+  }
 }
 
 .caption {
@@ -251,4 +255,23 @@ footer {
   .herbert img {
     width: 200px;
     height: auto;
+  }
+
+  nav {
+    a {
+      color: black;
+      text-decoration: none;
+      transition: color 0.5s ease-in-out;
+      
+    }
+
+    li:hover a {
+      color: blue;
+    }
+
+    ol {
+      list-style: none;
+    font-size: 25pt;
+    padding: 0;
+    }
   }
