--- a/styles/index.scss
+++ b/styles/index.scss
@@ -142,6 +142,44 @@ body {
   }
 }
 
+#modal {
+  display: none;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  position: relative;
+
+  cursor: pointer;
+
+  &.visible {
+    display: flex;
+  }
+
+  .close {
+    position: absolute;
+    top: 2rem;
+    font-size: 2rem;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  justify-content: center;
+  align-items: center;
+  z-index: 200;
+  img {
+    max-width: 80%;
+    max-height: 80%;
+
+    box-shadow: 0px 0px 20px black;
+  }
+}
+
 .caption {
   font-size: 30px;
   
