adjust design, try to debug that more eleemnts are in the "allimages" collection than expected

--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -15,6 +15,8 @@
     </head>
 <body>
 
+<div class="body">
+
 <div id="modal">
     <div class="close">
     Schließen
@@ -22,8 +24,20 @@
     <img src="">
 </div>
 
+
+        <div class="info">
+            <div class="text">
+                Das ist Herbert. Herbert ist ein Software-entwickler. Wer hätte das gedacht.
+            </div>
+<div class="herbert"><img src="/assets/herbert.png"></div>             
+        </div>
+
+       
+
+    <!--<div class="kack-haufen"><img src="/assets/kack.png"></div>-->
+
 <div class="main">
-    <div class="kack-haufen"><img src="/assets/kack.png"></div>
+
     <div class="social-media">
         <span class="icons">
             <a href="https://www.facebook.com/jodekadev" target="_blank"><i class="icon-facebook"></i></a>
@@ -44,9 +58,6 @@
     </div>
 </div>
 
-        <div class="info">
-            Das ist Herbert. Herbert ist ein Software-entwickler. Wer hätte das gedacht.
-        </div>
 
         <div class="content">
 
@@ -60,7 +71,6 @@
 </nav>
             
         </div>
-        <div class="herbert"><img src="/assets/herbert.png"></div>
     
         <footer><div>Josef Biehler</div><div>contact@kack.dev</div></footer>
     </div>
@@ -77,5 +87,7 @@
             document.querySelector("#modal").classList.remove("visible")
         });
     </script>
+
+    </div>
 </body>
 </html>
