--- a/views/index.njk
+++ b/views/index.njk
@@ -3,10 +3,10 @@ layout: base
 pageTitle: Kack.dev - Drawings
 
 pagination:
-  data: collections.allimages
-  size: 2
+  data: collections.drawnimages
+  size: 1
 ---
-
+{% log pagination.items %}
     {%- for item in pagination.items %}
         <div class="img-container">
             {% set imgUrl = item.data.img %}
