--- a/styles/index.scss
+++ b/styles/index.scss
@@ -26,16 +26,31 @@ body, html {
 .body {
     width: 100%;
     height: 100%;
-    min-width: 1400px;
-    min-height: 800px;
+    //min-width: 1400px;
+    //min-height: 800px;
     padding: 1rem;
     font-size: 12px;
-    background-color: #b9d8ff;//#f5faff;
+    //background-color: #b9d8ff;//#f5faff;
     font-family: "Bangers-Regular";
 
     display: flex;
     justify-content: center;
     align-items: center;
+
+    &::after {
+      
+      background-image: url("/assets/background.png");
+      background-repeat: repeat;
+      background-size: 800px;
+      opacity: 0.1;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      position: absolute;
+      z-index: -1;  
+      content: "";
+    }
 }
 
 .main {
@@ -83,7 +98,7 @@ body, html {
     border-radius:95% 4% 92% 5%/4% 95% 6% 95%;
     transform: rotate(2deg);
     
-    background-color: #e17168;
+    background-color: white;
 
     display: flex;
     flex-wrap: wrap;
@@ -211,17 +226,37 @@ body, html {
 }
 
 .info {
-  font-size: 30px;
+
+  .caption {
+    font-size: 40px;
+    width: 800px;
+    padding: 20px;
+  }
+  font-size: 40px;
   position: absolute;
-  width: 700px;
+  //width: 700px;
   top: 10px;
+
+  .tags {
+    font-size: 1.5rem;
+    a {
+      color: black;
+      text-decoration: none;
+
+      transition: color 0.5s ease-in-out;
+
+      &:hover {
+        color: blue;
+      }
+    }
+  }
 
   .text {
     transform: rotate(-2deg);
   
     //margin:15px;
     padding:5px 5px;
-    float:left;
+    //float:left;
     width: 500px;
     background:#ddd;
     border:1px solid #222;
@@ -238,16 +273,16 @@ body, html {
     position: absolute;
     right: 0;
     top: 0;
-    transform: rotate(2deg);
+    //ransform: rotate(2deg);
     margin:15px;
     padding:5px 5px;
     float:right;
-    background:#ddd;
+    background:#fff;
     border:1px solid #222;
     box-shadow:3px 3px 0 #222;
 
     width: 100px;
-    height: 100px;
+    //height: 100px;
     z-index: 100;
 }
 
@@ -314,13 +349,16 @@ footer {
     bottom: 0;
     right: 0;
     z-index: 200;*/
-
+    position: absolute;
+    right: -5px;
+    top: -130px;
+    z-index: 300;
   }
 
   .herbert img {
-    width: 120px;
+    width: 130px;
     height: auto;
-    filter: drop-shadow(2px 4px 6px black);//grayscale(1);
+    //filter: drop-shadow(2px 4px 6px black);//grayscale(1);
   }
 
   nav {
