--- a/template/index.css
+++ b/template/index.css
@@ -26,7 +26,7 @@ body, html {
 body {
     padding: 1rem;
     font-size: 12px;
-    background-color: grey;
+    background-color: #81ecec;
     font-family: "Bangers-Regular";
 
     display: flex;
@@ -36,8 +36,8 @@ body {
 
 .main {
     position: relative;
-    width: 1060px;
-    height: 500px;
+    min-width: 1060px;
+    min-height: 500px;
 }
 
 .kack-haufen1 {
