--- a/styles/index.scss
+++ b/styles/index.scss
@@ -25,6 +25,7 @@ body, html {
 
 .body {
     width: 100%;
+    min-width: 1368px;
     height: 100%;
     padding: 1rem;
     font-size: 12px;
@@ -55,9 +56,15 @@ body, html {
     position: relative;
     min-width: 1060px;
     min-height: 500px;
+    z-index: 200;
 }
 
 .content {
+  .cat {
+    position: absolute;
+    z-index: 300;
+    top: -70px;
+  }
   filter: drop-shadow(2px 4px 6px black);
     position: absolute;
     border: 2px solid black;
@@ -124,6 +131,7 @@ body, html {
 
 #modal {
   display: none;
+  z-index: 500;
   width: 100%;
   height: 100%;
   background-color: white;
@@ -151,7 +159,6 @@ body, html {
 
   justify-content: center;
   align-items: center;
-  z-index: 200;
   img {
     max-width: 80%;
     max-height: 80%;
@@ -162,7 +169,7 @@ body, html {
 
 header {
   position: relative;
-  z-index: 400;
+  z-index: 100;
 
   .main-caption {
     font-size: 30px;
@@ -300,6 +307,9 @@ footer {
   }
 
   nav {
+    position: absolute;
+    bottom: 0;
+
     a {
       color: black;
       text-decoration: none;
@@ -307,13 +317,19 @@ footer {
       
     }
 
-    li:hover a {
+    span:hover a {
       color: blue;
     }
 
-    ol {
-      list-style: none;
-    font-size: 25pt;
-    padding: 0;
+    span {
+      font-size: 25pt;
+    }
+
+    .current {
+      span {
+        font-size: 20pt;
+        text-decoration: underline;
+        vertical-align: middle;
+      }
     }
   }
