add background divs left and right

--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -61,8 +61,11 @@
         <div class="content">
         <div class="cat"><img src="/assets/catkackdev.png"></div>
 
+            <div class="bg-1"></div>
+
             {{ content | safe }}
 
+            <div class="bg-2"></div>
             <nav>
                 
                 {% if pagination.href.previous %}
