--- a/styles/index.scss
+++ b/styles/index.scss
@@ -65,6 +65,27 @@ body, html {
     z-index: 300;
     top: -70px;
   }
+  .bg-1 {
+    background-image: url("/assets/kackdevcatmain.png");
+    background-size: cover;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 250px;
+    height: 250px;
+    opacity: 0.5;
+  }
+  .bg-2 {
+    background-image: url("/assets/showkackdev.png");
+    background-size: cover;
+    position: absolute;
+    right: 0;
+    bottom: 50px;
+    width: 300px;
+    height: 300px;
+    opacity: 0.5;
+  }
+  
   filter: drop-shadow(2px 4px 6px black);
     position: absolute;
     border: 2px solid black;
