finally fix: collection "drawnimaes" contains more than expected because I manipulated the ciollection in eleventy config

--- a/views/index.njk
+++ b/views/index.njk
@@ -3,7 +3,7 @@ layout: base
 pageTitle: Kack.dev - Drawings
 
 pagination:
-  data: collections.drawnimages
+  data: collections.alles
   size: 1
 ---
 {% log pagination.items %}
