--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -37,7 +37,15 @@
             </div>
             <div class="tags">
                 {% for t in collections.allTags %}
-                    <a href="/{{ t }}/index.html">#{{t}}</a>
+                    {% set display = t %}
+
+                    {% if 'alles' in t %}
+                        {% set t = '' %}
+                    {% else %}
+                        {% set t = t + '/' %}
+                    {% endif %}
+                    
+                    <a href="/{{ t }}index.html">#{{display}}</a><br>
                 {% endfor %}
             </div>
         </div>
