--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -11,6 +11,11 @@
         <meta name="twitter:site" content="@JosefBiehler" />
         <meta name="twitter:image" content="https://kack.dev/assets/twittercard.jpg" />
         
+        <link rel="shortcut icon" type="image/x-icon" href="/assets/icon/favicon.ico">
+        <link rel="icon" type="image/png" sizes="32x32" href="/assets/icon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="/assets/icon/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/assets/icon/favicon-16x16.png">
+
         <title>Kack Dev</title>
     </head>
 <body>
