add impressum + PROJECT.md for biehler-josef portfolio page

--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -35,6 +35,7 @@
                 Das ist Herbert. Herbert ist ein Softwareentwickler. Wer hätte das gedacht.
             </div>
             <div class="herbert"><img src="/assets/herbert.png"></div> 
+            <div class="impressum">Josef Biehler | contact@kack.dev</div>
         </div>
         <div class="sub-caption">
            <div class="text">
