--- a/_includes/img.njk
+++ b/_includes/img.njk
@@ -1,2 +1,7 @@
-
-            <img src="{{ imgUrl }}" class="clickable">
+<div class="img-description">
+    {{ data.imgDescription }}
+</div>
+<div class="img-container">
+    <img src="{{ data.img }}" class="clickable">
+</div>
+            
