--- a/views/index.njk
+++ b/views/index.njk
@@ -5,6 +5,7 @@ pageTitle: Kack.dev - Drawings
 pagination:
   data: collections.alles
   size: 1
+  reverse: true
 ---
 {% log pagination.items %}
     {%- for item in pagination.items %}
