change description of twitter card

--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -6,9 +6,9 @@
         <link rel="stylesheet" href="/index.css">
         
         <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:description" content="Kack.dev Cartoons" />
+        <meta name="twitter:description" content="Cartoons aus dem Leben eines Entwicklers" />
         <meta name="twitter:title" content="Eine Ode an den Entwickler" />
-        <meta name="twitter:site" content="@JosefBiehler" />
+        <meta name="twitter:site" content="@KackDev" />
         <meta name="twitter:image" content="https://kack.dev/assets/twittercard.jpg" />
         
         <link rel="shortcut icon" type="image/x-icon" href="/assets/icon/favicon.ico">
