--- a/_includes/base.njk
+++ b/_includes/base.njk
@@ -65,8 +65,8 @@
 <div class="main">    
     <div class="social-media">
         <span class="icons">
-            <a href="https://www.facebook.com/jodekadev" target="_blank"><i class="icon-facebook"></i></a>
-            <a href="https://twitter.com/JosefBiehler" target="_blank"><i class="icon-twitter"></i></a>
+            <a href="https://www.facebook.com/KackDev-104788297772739/" target="_blank"><i class="icon-facebook"></i></a>
+            <a href="https://twitter.com/KackDev" target="_blank"><i class="icon-twitter"></i></a>
             <a href="https://github.com/gabbersepp/" target="_blank"><i class="icon-github-circled"></i></a>
             <a href="mailto:contact@kack.dev"><i class="icon-envelope-open"></i></a>
         </span>
