add zip & upload fix twitter integration: filter out line breaks and such stuff move imageViews into other folder to be able to reuse upload.js

--- a/_includes/img.njk
+++ b/_includes/img.njk
@@ -1,5 +1,5 @@
 <div class="img-description">
-    {{ data.imgDescription }}
+    {{ data.imgDescription | cleartweet }}
 </div>
 <div class="img-container">
     <img src="{{ data.img }}" class="clickable">
