--- a/app/_includes/base.njk
+++ b/app/_includes/base.njk
@@ -35,7 +35,7 @@
                 Das ist Herbert. Herbert ist ein Softwareentwickler. Wer hätte das gedacht.
             </div>
             <div class="herbert"><img src="/assets/herbert.png"></div> 
-            <div class="impressum">Josef Biehler | contact@kack.dev</div>
+            <div class="impressum">Josef Biehler | Buchäckerstr. 5 | 92648 | contact@kack.dev</div>
         </div>
         <div class="sub-caption">
            <div class="text">
